# M-Meter

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: baseline_music_note_24.xml
app/src/main/res/menu/: menu_bottom_nav.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/navigation/: auth_nav_graph.xml
app/src/main/res/values/: strings.xml
core/bases/: build.gradle
core/bases/src/main/cpp/: CMakeLists.txt  bases.cpp
core/bases/src/main/res/anim/: rotate_animator.xml
core/bases/src/main/res/color/: bottom_nav_icon_tint.xml  chip_background.xml  chip_text_color.xml
core/bases/src/main/res/drawable/: arrow_left.xml  (+33 more)
core/data/local/: build.gradle
core/data/remote/: build.gradle
core/data/repository/: build.gradle
core/domain/entities/: build.gradle
core/domain/usecase/: build.gradle
feature/: feature_structure.txt  project_structure.txt
feature/authectication/domain/usecase/: build.gradle
feature/authectication/presentation/ui/: build.gradle
feature/authectication/presentation/viewmodel/: build.gradle
feature/home/domain/usecase/: build.gradle
feature/home/presentation/home-ui/: build.gradle
feature/home/presentation/viewmodel/: build.gradle
feature/trvia/data/repository/: build.gradle
feature/trvia/domain/usecase/: build.gradle
feature/trvia/presentation/ui/: build.gradle
feature/trvia/presentation/viewmodel/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
(+712 files in other folders)
